fix overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -118,6 +118,7 @@ html,
     white-space: nowrap;
     padding-left: 15px;
     padding-right: 15px;
+    position: fixed;
 }
 
 .nav-icon {
